# Codyssi

./: Codyssi.cabal  Solution.hs.tmpl  Taskfile.yml  create_solution.py  mise.toml
app/: Main.hs
data/: aeolian.txt  arithmetic.txt  budget.txt  compass.txt  cyclops.txt  games.txt  guards.txt  islands.txt  lotus.txt  readings.txt  risky.txt  sensors.txt  siren.txt  supplies.txt  traversing.txt  whirlpool.txt  windy.txt
lib/: Aeolian.hs  Arithmetic.hs  Budget.hs  Compass.hs  Cyclops.hs  Games.hs  Guards.hs  Islands.hs  Lotus.hs  Readings.hs  Risky.hs  Sensors.hs  Siren.hs  Supplies.hs  Traversing.hs  Whirlpool.hs  Windy.hs
