cabal-version: 3.14
name: Codyssi
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Budget
    Readings
    Sensors

  build-depends: base ^>=4.21.0.0
  hs-source-dirs: lib
  default-language: GHC2024

executable Codyssi
  import: warnings
  main-is: Main.hs
  build-depends:
    Codyssi,
    base ^>=4.21.0.0,

  hs-source-dirs: app
  default-language: GHC2024
